add change item 'is_published' flag route
