# storage/api-docs/api-docs.json
@@ -698,6 +698,37 @@
                 ]
             }
         },
+        "/api/admin/blog/items/{id}/change-publish": {
+            "get": {
+                "tags": [
+                    "Admin Content"
+                ],
+                "summary": "change item 'is_published' flag",
+                "operationId": "b80c34ae74c17fbcd76a9dbeef2ae413",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Item id",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "404": {
+                        "description": "Model not found",
+                        "content": {
+                            "application/json": {}
+                        }
+                    }
+                }
+            }
+        },
         "/api/admin/blog/posts": {
             "get": {
                 "tags": [
@@ -755,255 +786,6 @@
                     },
                     "403": {
                         "description": "Forbidden"
-                    }
-                },
-                "security": [
-                    {
-                        "bearer": []
-                    }
-                ]
-            },
-            "post": {
-                "tags": [
-                    "Admin"
-                ],
-                "summary": "Create post.",
-                "operationId": "cc69d21b8ad8cff4671efdde22115371",
-                "requestBody": {
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "required": [
-                                    "title",
-                                    "group",
-                                    "is_published",
-                                    "sort"
-                                ],
-                                "properties": {
-                                    "title": {
-                                        "description": "Post title",
-                                        "type": "string",
-                                        "nullable": false
-                                    },
-                                    "is_published": {
-                                        "description": "Post published flag",
-                                        "type": "integer",
-                                        "nullable": false
-                                    },
-                                    "sort": {
-                                        "description": "sort",
-                                        "type": "integer",
-                                        "nullable": false
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "Success",
-                        "content": {
-                            "application/json": {
-                                "schema": {}
-                            }
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized"
-                    },
-                    "403": {
-                        "description": "Forbidden"
-                    },
-                    "422": {
-                        "description": "Request validation error.",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "message": {
-                                            "description": "Validation information.",
-                                            "type": "string",
-                                            "example": "The given data was invalid.",
-                                            "nullable": false
-                                        },
-                                        "errors": {
-                                            "description": "Object with all errors.",
-                                            "type": "object",
-                                            "nullable": false
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    }
-                },
-                "security": [
-                    {
-                        "bearer": []
-                    }
-                ]
-            }
-        },
-        "/api/admin/blog/posts/{id}": {
-            "get": {
-                "tags": [
-                    "Admin"
-                ],
-                "summary": "Show post.",
-                "description": "Display the specified resource.",
-                "operationId": "51d8f99da8c1090fb2653507c17debf9",
-                "parameters": [
-                    {
-                        "name": "post",
-                        "in": "path",
-                        "description": "post id",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Success",
-                        "content": {
-                            "application/json": {}
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized"
-                    },
-                    "403": {
-                        "description": "Forbidden"
-                    },
-                    "404": {
-                        "description": "not found"
-                    }
-                },
-                "security": [
-                    {
-                        "bearer": []
-                    }
-                ]
-            }
-        },
-        "/api/admin/blog/posts/{post}?_method=PUT": {
-            "post": {
-                "tags": [
-                    "Admin"
-                ],
-                "summary": "Update Month block item.",
-                "operationId": "1a35b0227354448e56284b3442d78cc1",
-                "requestBody": {
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "required": [
-                                    "title",
-                                    "is_published",
-                                    "sort"
-                                ],
-                                "properties": {
-                                    "title": {
-                                        "description": "Post title",
-                                        "type": "string",
-                                        "nullable": false
-                                    },
-                                    "is_published": {
-                                        "description": "Post published flag",
-                                        "type": "integer",
-                                        "nullable": false
-                                    },
-                                    "sort": {
-                                        "description": "sort",
-                                        "type": "integer",
-                                        "nullable": false
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "Success",
-                        "content": {
-                            "application/json": {
-                                "schema": {}
-                            }
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized"
-                    },
-                    "403": {
-                        "description": "Forbidden"
-                    },
-                    "404": {
-                        "description": "Model not found"
-                    },
-                    "422": {
-                        "description": "Request validation error.",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "message": {
-                                            "description": "Validation information.",
-                                            "type": "string",
-                                            "example": "The given data was invalid.",
-                                            "nullable": false
-                                        },
-                                        "errors": {
-                                            "description": "Object with all errors.",
-                                            "type": "object",
-                                            "nullable": false
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    }
-                },
-                "security": [
-                    {
-                        "bearer": []
-                    }
-                ]
-            }
-        },
-        "/api/admin/blog/posts/{post}": {
-            "delete": {
-                "tags": [
-                    "Admin"
-                ],
-                "summary": "Delete post ID",
-                "operationId": "9e0078a6b01af62e8fc20e417298ecb5",
-                "parameters": [
-                    {
-                        "name": "post",
-                        "in": "path",
-                        "description": "post ID",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Success",
-                        "content": {
-                            "application/json": {}
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized"
-                    },
-                    "403": {
-                        "description": "Forbidden"
-                    },
-                    "404": {
-                        "description": "not found"
                     }
                 },
                 "security": [
@@ -1178,6 +960,28 @@
                                     },
                                     "type": "object"
                                 }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request"
+                    }
+                }
+            }
+        },
+        "/api/auth/me": {
+            "get": {
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "User auth data",
+                "operationId": "feab6468f3a3c0a1d206893c9d1bff9c",
+                "responses": {
+                    "200": {
+                        "description": "User.",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
                             }
                         }
                     },
